--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; url=https://astlin.vercel.app/">
   <link rel="canonical" href="https://astlin.vercel.app/">
-  <title>Redirecting...</title>
+  <title>@astlin_dijo</title>
 </head>
 <body>
   <p>If you are not redirected automatically, <a href="https://astlin.vercel.app/">click here</a>.</p>
