Update canonical link and redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; url=https://astlin.vercel.app/">
-  <link rel="canonical" href="https://astlin.vercel.app/">
+  <link rel="canonical" href="https://astlindijo.vercel.app/">
   <title>@astlin_dijo</title>
 </head>
 <body>
-  <p>If you are not redirected automatically, <a href="https://astlin.vercel.app/">click here</a>.</p>
+  <p>If you are not redirected automatically, <a href="https://astlindijo.vercel.app/">click here</a>.</p>
 </body>
 </html>
