--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://astlin.vercel.app/">
+  <meta http-equiv="refresh" content="0; url=https://astlindijo.vercel.app/">
   <link rel="canonical" href="https://astlindijo.vercel.app/">
   <title>@astlin_dijo</title>
 </head>
